[package]
name = "singularity_sync"
version = "0.1.0"
authors = ["Bradford N. Roarr <bradford_roarr@brown.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0"
chrono = { version = "~0.4", features = ["serde"] }
clap = "~2.33.1"
reqwest = { version = "~0.10", features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
serde_yaml = "0.8"
